--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "1.0.0-beta.42",
     "@vtex/react-csv-parse": "^3.0.2",
     "chartist": "0.10.1",
+    "chartist-plugin-tooltips": "0.0.17",
     "classnames": "2.2.5",
     "data-forge": "^1.0.11",
     "material-ui": "1.0.0-beta.41",
