--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@material-ui/core": "^1.2.1",
     "@material-ui/icons": "1.0.0-beta.42",
     "@vtex/react-csv-parse": "^3.0.2",
-    "chartist": "0.10.1",
-    "chartist-plugin-tooltips": "0.0.17",
+    "chartist": "^0.10.1",
+    "chartist-plugin-pointlabels": "0.0.6",
+    "chartist-plugin-tooltip": "0.0.11",
+    "chartist-plugin-tooltip-infl": "0.0.3",
     "classnames": "2.2.5",
     "data-forge": "^1.0.11",
+    "jquery": "^3.3.1",
     "material-ui": "1.0.0-beta.41",
     "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.22.2",
