--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.0.17",
-    "react-swipeable-views": "0.12.12"
+    "react-swipeable-views": "0.12.12",
+    "round-to": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
