--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.3.1",
     "material-ui": "1.0.0-beta.41",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mathjs": "^5.0.0",
     "moment": "^2.22.2",
     "npm-run-all": "4.1.2",
     "perfect-scrollbar": "1.3.0",
